--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -86,6 +86,7 @@
   .profile__name {
     font-size: 1.7rem; /* Reduzir o tamanho da fonte para dispositivos móveis */
     padding-right: 0; /* Remover padding direito para centralizar o nome */
+    margin-right: 10px;
   }
 
   .profile__about {
@@ -94,7 +95,7 @@
 
   .profile__add-button {
     background: url(../images/images__button/plus.png) no-repeat center;
-    padding: 50px 200px;
+    padding: 30px 160px;
     border: 2px solid #fff;
   }
 }
