--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -9,17 +9,26 @@
 }
 
 .cards__card {
+  position: relative;
   width: 282px;
   height: 361px;
   background-color: #fff;
   border-radius: 1rem;
   overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra suave para todos os cartões */
+  display: flex;
+  flex-direction: column;
 }
 
+/* Estilo da imagem do cartão para cobrir completamente o topo */
 .cards__image {
-  width: 282px;
-  height: 282px;
-  transition: transform 0.3s ease, opacity 0.3s ease;
+  width: 100%;
+  height: 100%; /* Garante que a imagem preencha o contêiner */
+  max-height: 282px; /* Define uma altura máxima para a imagem */
+  object-fit: cover; /* Faz com que a imagem cubra totalmente o contêiner */
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+  display: block;
 }
 
 .cards__image:hover {
@@ -59,6 +68,28 @@
 }
 .cards__like-icon:hover {
   background-image: url(../images/images__button/like__active.png);
+}
+
+.cards__trash {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 24px; /* Tamanho consistente */
+  height: 24px;
+  background: none; /* Remove qualquer fundo extra */
+  border: none; /* Remove borda extra */
+  padding: 0;
+  cursor: pointer;
+  z-index: 1;
+}
+
+.cards__trash img {
+  width: 100%; /* Ajusta a imagem ao tamanho do botão */
+  height: 100%;
+  display: block;
+}
+.cards__trash:hover {
+  opacity: 0.5;
 }
 
 @media (max-width: 1024px) and (min-width: 768px) {
