--- a/pages/index.css
+++ b/pages/index.css
@@ -3,3 +3,4 @@
 @import url(../blocks/profile.css);
 @import url(../blocks/cards.css);
 @import url(../blocks/popup.css);
+@import url(../blocks/popup__add.css);
