--- a/blocks/header.css
+++ b/blocks/header.css
@@ -3,6 +3,8 @@ body {
   max-width: 1280px;
   margin: 0 auto;
   padding: 0 20px;
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
 }
 
 .header {
