--- a/blocks/popup.css
+++ b/blocks/popup.css
@@ -79,27 +79,28 @@
   opacity: 0.6;
 }
 
-/* Popup para visualização de imagem em tamanho grande */
 .popup__container_large {
-  max-width: 80vw;
-  max-height: 80vh;
+  max-width: 75vw;
+  max-height: 75vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 20px;
+  padding: 0;
+  margin: 0;
   background-color: #fff;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  z-index: 1000;
 }
 
+/* Imagem ampliada no popup */
 .popup__image-large {
-  max-width: 100%;
-  max-height: 70vh;
-  width: auto;
-  height: auto;
-  margin-bottom: 10px;
+  max-width: 75%;
+  max-height: 75%;
+  object-fit: contain; /* Mantém a proporção da imagem */
+  margin: 10px 0;
+  padding-bottom: 0;
+  border-radius: 10px; /* Bordas arredondadas para combinar com o contêiner */
 }
 /* Abaixo é para o popup de adicionar cartões */
 
@@ -120,61 +121,3 @@
     margin-bottom: 4.5rem;
   }
 }
-
-/* 
-.popup {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.5);
-  display: none;
-  justify-content: center;
-  align-items: center;
-}
-
-.popup__content {
-  background-color: white;
-  padding: 20px;
-  border-radius: 10px;
-  width: 430px;
-  height: 330px;
-  text-align: center;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-.popup__content h2 {
-  margin-bottom: 20px;
-}
-
-.popup__content input {
-  font-family: "Inter 400";
-  font-size: 14px;
-  width: 358px;
-  height: 27.26px;
-  padding: 10px;
-  border: none;
-  margin-bottom: 10px;
-  border-bottom: 1px solid #ccc;
-  border-radius: 5px;
-}
-
-.popup__save-button {
-  width: 358px;
-  height: 50.15px;
-  padding: 10px;
-  background-color: black;
-  color: white;
-  border: none;
-  border-radius: 2px;
-  cursor: pointer;
-}
-
-.popup__save-button:hover {
-  background-color: #444;
-}
-
-.popup.show {
-  display: flex;
-} */
