--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -18,6 +18,8 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
+  font-family: "Inter", sans-serif;
+  font-weight: 900;
 }
 
 /* Estilo da imagem do cartão para cobrir completamente o topo */
@@ -45,7 +47,6 @@
 }
 
 .cards__title {
-  font-family: Inter;
   font-size: 1.5rem;
   font-style: normal;
   font-weight: 900;
