--- a/blocks/popup__add.css
+++ b/blocks/popup__add.css
@@ -1,31 +1,31 @@
-/* Popup de adicionar novo local */
+/* Popup de adicionar novo cartão */
 .popup_add {
   display: none;
-  z-index: 100;
+  z-index: 1000;
 }
 
-.popup_add_opened {
-  display: block;
+.popup_opened {
+  display: flex; /* Mostra o popup quando está aberto */
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.5); /* Fundo escuro fora do popup */
+  justify-content: center;
+  align-items: center;
 }
 
+/* Contêiner do popup */
 .popup__container {
-  width: 26.875rem;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  width: 26.875rem; /* Largura do popup */
   border-radius: 0.625rem;
-  background-color: #fff;
-  padding: 2.125rem 2.25rem;
+  background-color: #fff; /* Fundo branco do popup */
+  padding: 2.125rem 2.25rem; /* Espaçamento interno */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Sombra para destaque */
   box-sizing: border-box;
+  position: relative;
 }
-
 .popup__title {
   color: #000;
   font-size: 1.5rem;
@@ -56,8 +56,7 @@
 }
 
 .popup__close {
-  background: url(../images/images__button/close_button.png) no-repeat
-    transparent center;
+  background: url(../images/images__button/close_button.png) no-repeat center;
   width: 2.5rem;
   height: 2.5rem;
   border: none;
@@ -65,6 +64,7 @@
   top: -2.5rem;
   right: -2.5rem;
   cursor: pointer;
+  z-index: 1010;
 }
 
 @media screen and (max-width: 992px) {
