correção arquivo vendor

--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -72,7 +72,7 @@
   border: none;
 }
 .cards__like-icon:hover {
-  background-image: url(../images/images__button/like__active.png);
+  background-image: url(../images/images__button/like__active.webp);
 }
 
 .cards__trash {
