--- a/blocks/popup.css
+++ b/blocks/popup.css
@@ -93,7 +93,7 @@
 .popup__close {
   width: 24px;
   height: 24px;
-  background: url(../images/images__button/close_button.png) no-repeat center;
+  background: url(../images/images__button/close_button.webp) no-repeat center;
   background-size: contain;
   border: none;
   cursor: pointer;
@@ -102,6 +102,114 @@
 
 .popup__close:hover {
   opacity: 0.8;
+}
+
+/* Popup de adicionar novo cartão */
+.popup_add {
+  display: none;
+  z-index: 1000;
+}
+
+.popup_opened {
+  display: flex; /* Mostra o popup quando está aberto */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5); /* Fundo escuro fora do popup */
+  justify-content: center;
+  align-items: center;
+}
+
+/* Contêiner do popup */
+.popup__container {
+  width: 26.875rem; /* Largura do popup */
+  border-radius: 0.625rem;
+  background-color: #fff; /* Fundo branco do popup */
+  padding: 2.125rem 2.25rem; /* Espaçamento interno */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Sombra para destaque */
+  box-sizing: border-box;
+  position: relative;
+}
+.popup__title {
+  color: #000;
+  font-size: 1.5rem;
+  margin: 0 0 1.5rem;
+}
+
+.popup__input {
+  border: none;
+  width: 100%;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  display: block;
+  padding: 0.8125rem 0.3125rem;
+  margin-top: 1.0625rem;
+  font-size: 0.875rem;
+  box-sizing: border-box;
+}
+
+.popup__submit {
+  margin-top: 1.5rem;
+  width: 100%;
+  padding: 0.875rem;
+  background-color: #000;
+  color: #fff;
+  border: none;
+  border-radius: 0.125rem;
+  font-size: 1.125rem;
+  cursor: pointer;
+}
+
+.popup__close {
+  background: url(../images/images__button/close_button.webp) no-repeat center;
+  width: 2.5rem;
+  height: 2.5rem;
+  border: none;
+  position: absolute;
+  top: -2.5rem;
+  right: -2.5rem;
+  cursor: pointer;
+  z-index: 1010;
+}
+
+.popup__container_large {
+  max-width: 90vw;
+  max-height: 80vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 20px 15px 10px;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+/* Imagem ampliada no popup */
+.popup__image-large {
+  max-width: 75vw;
+  max-height: 75vh;
+  object-fit: contain; /* Mantém a proporção da imagem */
+  margin: 10px 0;
+  padding: 0;
+  border-radius: 10px; /* Bordas arredondadas para combinar com o contêiner */
+}
+
+.popup__image_close {
+  position: absolute;
+  top: 0.8rem;
+  right: 27rem;
+  width: 24px;
+  height: 24px;
+  background: url(../images/images__button/close_button.webp) no-repeat center;
+  background-size: contain;
+  border: none;
+  cursor: pointer;
+  z-index: 1010;
+}
+.popup__image_close:hover {
+  opacity: 0.6;
 }
 
 /* Responsividade */
@@ -125,5 +233,95 @@
   .popup__title {
     font-size: 1.125rem;
     margin-bottom: 4.5rem;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .popup__container {
+    width: 88%;
+    box-sizing: border-box;
+    padding: 1.56rem 1.38rem;
+  }
+  .popup__close {
+    top: -3rem;
+    right: 0.2rem;
+  }
+  .popup__title {
+    font-size: 1.125rem;
+    margin-bottom: 4.5rem;
+  }
+}
+
+@media (max-width: 1100px) and (min-width: 910px) {
+  .popup__container_large {
+    max-width: 80vw;
+    max-height: 80vh;
+    padding-top: 40px;
+    border-radius: 8px;
+  }
+
+  .popup__image-large {
+    max-width: 75vw;
+    max-height: 75vh;
+    margin: 10px 0;
+    border-radius: 8px;
+  }
+
+  .popup__image_close {
+    top: 0.3rem;
+    right: 21rem;
+    width: 24px;
+    height: 24px;
+    font-size: 22px;
+  }
+}
+
+/* Estilo responsivo para telas de 900px a 768px */
+@media (max-width: 900px) and (min-width: 768px) {
+  .popup__container_large {
+    max-width: 85vw;
+    max-height: 80vh;
+    padding-top: 40px;
+    border-radius: 8px;
+  }
+
+  .popup__image-large {
+    max-width: 75vw;
+    max-height: 75vh;
+    margin: 10px 0;
+    border-radius: 8px;
+  }
+
+  .popup__image_close {
+    top: 0.1rem;
+    right: 17.5rem;
+    width: 24px;
+    height: 24px;
+    font-size: 20px;
+  }
+}
+
+/* Estilo responsivo para telas até 768px */
+@media (max-width: 768px) {
+  .popup__container_large {
+    max-width: 90vw;
+    max-height: 80vh;
+    padding-top: 40px;
+    border-radius: 5px;
+  }
+
+  .popup__image-large {
+    max-width: 75vw;
+    max-height: 75vh;
+    margin: 10px 0;
+    border-radius: 5px;
+  }
+
+  .popup__image_close {
+    top: 0.5rem;
+    right: 12rem;
+    width: 20px;
+    height: 20px;
+    font-size: 18px;
   }
 }
