--- a/blocks/popup.css
+++ b/blocks/popup.css
@@ -84,13 +84,16 @@
 
 /* Botão de envio desabilitado */
 .popup__submit_disabled {
+  background-color: #fff;
   background-color: #ccc;
   cursor: not-allowed;
 }
 
 /* Botão de fechar o popup */
-
 .popup__close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
   width: 24px;
   height: 24px;
   background: url(../images/images__button/close_button.webp) no-repeat center;
@@ -159,169 +162,4 @@
   border-radius: 0.125rem;
   font-size: 1.125rem;
   cursor: pointer;
-}
-
-.popup__close {
-  background: url(../images/images__button/close_button.webp) no-repeat center;
-  width: 2.5rem;
-  height: 2.5rem;
-  border: none;
-  position: absolute;
-  top: -2.5rem;
-  right: -2.5rem;
-  cursor: pointer;
-  z-index: 1010;
-}
-
-.popup__container_large {
-  max-width: 90vw;
-  max-height: 80vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 20px 15px 10px;
-  background-color: #fff;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-}
-
-/* Imagem ampliada no popup */
-.popup__image-large {
-  max-width: 75vw;
-  max-height: 75vh;
-  object-fit: contain; /* Mantém a proporção da imagem */
-  margin: 10px 0;
-  padding: 0;
-  border-radius: 10px; /* Bordas arredondadas para combinar com o contêiner */
-}
-
-.popup__image_close {
-  position: absolute;
-  top: 0.8rem;
-  right: 27rem;
-  width: 24px;
-  height: 24px;
-  background: url(../images/images__button/close_button.webp) no-repeat center;
-  background-size: contain;
-  border: none;
-  cursor: pointer;
-  z-index: 1010;
-}
-.popup__image_close:hover {
-  opacity: 0.6;
-}
-
-/* Responsividade */
-@media screen and (max-width: 992px) {
-  .popup__container {
-    max-width: 75vw;
-    max-height: 75vh;
-  }
-}
-
-@media screen and (max-width: 992px) {
-  .popup__container {
-    width: 88%;
-    box-sizing: border-box;
-    padding: 1.56rem 1.38rem;
-  }
-  .popup__close {
-    top: -3rem;
-    right: 0.2rem;
-  }
-  .popup__title {
-    font-size: 1.125rem;
-    margin-bottom: 4.5rem;
-  }
-}
-
-@media screen and (max-width: 992px) {
-  .popup__container {
-    width: 88%;
-    box-sizing: border-box;
-    padding: 1.56rem 1.38rem;
-  }
-  .popup__close {
-    top: -3rem;
-    right: 0.2rem;
-  }
-  .popup__title {
-    font-size: 1.125rem;
-    margin-bottom: 4.5rem;
-  }
-}
-
-@media (max-width: 1100px) and (min-width: 910px) {
-  .popup__container_large {
-    max-width: 80vw;
-    max-height: 80vh;
-    padding-top: 40px;
-    border-radius: 8px;
-  }
-
-  .popup__image-large {
-    max-width: 75vw;
-    max-height: 75vh;
-    margin: 10px 0;
-    border-radius: 8px;
-  }
-
-  .popup__image_close {
-    top: 0.3rem;
-    right: 21rem;
-    width: 24px;
-    height: 24px;
-    font-size: 22px;
-  }
-}
-
-/* Estilo responsivo para telas de 900px a 768px */
-@media (max-width: 900px) and (min-width: 768px) {
-  .popup__container_large {
-    max-width: 85vw;
-    max-height: 80vh;
-    padding-top: 40px;
-    border-radius: 8px;
-  }
-
-  .popup__image-large {
-    max-width: 75vw;
-    max-height: 75vh;
-    margin: 10px 0;
-    border-radius: 8px;
-  }
-
-  .popup__image_close {
-    top: 0.1rem;
-    right: 17.5rem;
-    width: 24px;
-    height: 24px;
-    font-size: 20px;
-  }
-}
-
-/* Estilo responsivo para telas até 768px */
-@media (max-width: 768px) {
-  .popup__container_large {
-    max-width: 90vw;
-    max-height: 80vh;
-    padding-top: 40px;
-    border-radius: 5px;
-  }
-
-  .popup__image-large {
-    max-width: 75vw;
-    max-height: 75vh;
-    margin: 10px 0;
-    border-radius: 5px;
-  }
-
-  .popup__image_close {
-    top: 0.5rem;
-    right: 12rem;
-    width: 20px;
-    height: 20px;
-    font-size: 18px;
-  }
 }
