--- a/blocks/popup__image.css
+++ b/blocks/popup__image.css
@@ -27,7 +27,7 @@
   right: 27rem;
   width: 24px;
   height: 24px;
-  background: url(../images/images__button/close_button.webp) no-repeat center;
+  background: url(../images/images__button/close_button.png) no-repeat center;
   background-size: contain;
   border: none;
   cursor: pointer;
