Correção do evento linkado ao botão incorretamente, deveria ser no formulário. Correção botão de fechar responsividade

--- a/blocks/popup__image.css
+++ b/blocks/popup__image.css
@@ -38,46 +38,20 @@
 }
 
 /* Responsividade */
-@media screen and (max-width: 992px) {
-  .popup__container {
-    max-width: 75vw;
-    max-height: 75vh;
-  }
-}
 
-@media screen and (max-width: 992px) {
+@media (max-width: 2100px) and (min-width: 1800px) {
   .popup__container {
-    width: 88%;
+    width: 35%;
     box-sizing: border-box;
     padding: 1.56rem 1.38rem;
   }
   .popup__close {
     top: -3rem;
-    right: 0.2rem;
   }
   .popup__title {
-    font-size: 1.125rem;
-    margin-bottom: 4.5rem;
+    font-size: 2.125rem;
+    margin-bottom: 3.5rem;
   }
-}
-
-@media screen and (max-width: 992px) {
-  .popup__container {
-    width: 88%;
-    box-sizing: border-box;
-    padding: 1.56rem 1.38rem;
-  }
-  .popup__close {
-    top: -3rem;
-    right: 0.2rem;
-  }
-  .popup__title {
-    font-size: 1.125rem;
-    margin-bottom: 4.5rem;
-  }
-}
-
-@media (max-width: 1100px) and (min-width: 910px) {
   .popup__container_large {
     max-width: 80vw;
     max-height: 80vh;
@@ -93,8 +67,159 @@
   }
 
   .popup__image_close {
-    top: 0.3rem;
-    right: 21rem;
+    top: 1.6rem;
+    right: 38.5rem;
+    width: 24px;
+    height: 24px;
+    font-size: 22px;
+  }
+}
+
+/* Estilo responsivo para telas de 1799px a 1600px */
+
+@media (max-width: 1799px) and (min-width: 1600px) {
+  .popup__container {
+    width: 40%;
+    box-sizing: border-box;
+    padding: 1.56rem 1.38rem;
+  }
+  .popup__close {
+    top: -3rem;
+  }
+  .popup__title {
+    font-size: 2.125rem;
+    margin-bottom: 3rem;
+  }
+  .popup__container_large {
+    max-width: 80vw;
+    max-height: 80vh;
+    padding-top: 40px;
+    border-radius: 8px;
+  }
+
+  .popup__image-large {
+    max-width: 75vw;
+    max-height: 75vh;
+    margin: 10px 0;
+    border-radius: 8px;
+  }
+
+  .popup__image_close {
+    top: 1.3rem;
+    right: 34rem;
+    width: 24px;
+    height: 24px;
+    font-size: 22px;
+  }
+}
+
+/* Estilo responsivo para telas de 1599px a 1400px */
+
+@media (max-width: 1599px) and (min-width: 1400px) {
+  .popup__container {
+    width: 40%;
+    box-sizing: border-box;
+    padding: 1.56rem 1.38rem;
+  }
+  .popup__close {
+    top: -3rem;
+  }
+  .popup__title {
+    font-size: 2.125rem;
+    margin-bottom: 3.5rem;
+  }
+  .popup__container_large {
+    max-width: 80vw;
+    max-height: 80vh;
+    padding-top: 40px;
+    border-radius: 8px;
+  }
+
+  .popup__image-large {
+    max-width: 75vw;
+    max-height: 75vh;
+    margin: 10px 0;
+    border-radius: 8px;
+  }
+
+  .popup__image_close {
+    top: 1.3rem;
+    right: 28rem;
+    width: 24px;
+    height: 24px;
+    font-size: 22px;
+  }
+}
+
+/* Estilo responsivo para telas de 1399px a 1200px */
+
+@media (max-width: 1399px) and (min-width: 1200px) {
+  .popup__container {
+    width: 40%;
+    box-sizing: border-box;
+    padding: 1.56rem 1.38rem;
+  }
+  .popup__close {
+    top: -3rem;
+  }
+  .popup__title {
+    font-size: 2.125rem;
+    margin-bottom: 3.5rem;
+  }
+  .popup__container_large {
+    max-width: 80vw;
+    max-height: 80vh;
+    padding-top: 40px;
+    border-radius: 8px;
+  }
+
+  .popup__image-large {
+    max-width: 75vw;
+    max-height: 75vh;
+    margin: 10px 0;
+    border-radius: 8px;
+  }
+
+  .popup__image_close {
+    top: 1.3rem;
+    right: 23rem;
+    width: 24px;
+    height: 24px;
+    font-size: 22px;
+  }
+}
+
+@media (max-width: 1100px) and (min-width: 910px) {
+  .popup__container {
+    width: 50%;
+    box-sizing: border-box;
+    padding: 1.56rem 1.38rem;
+  }
+  .popup__close {
+    top: -3rem;
+    right: 0.2rem;
+  }
+  .popup__title {
+    font-size: 2.125rem;
+    margin-bottom: 2.5rem;
+  }
+  .popup__container_large {
+    max-width: 80vw;
+    max-height: 80vh;
+    padding-top: 40px;
+    border-radius: 8px;
+  }
+
+  .popup__image-large {
+    max-width: 75vw;
+    max-height: 75vh;
+    margin: 10px 0;
+    border-radius: 8px;
+  }
+
+  .popup__image_close {
+    top: 1rem;
+    right: 13rem;
     width: 24px;
     height: 24px;
     font-size: 22px;
@@ -106,7 +231,7 @@
   .popup__container_large {
     max-width: 85vw;
     max-height: 80vh;
-    padding-top: 40px;
+    padding-top: 20px;
     border-radius: 8px;
   }
 
@@ -118,35 +243,35 @@
   }
 
   .popup__image_close {
-    top: 0.1rem;
-    right: 17.5rem;
+    top: 1.7rem;
+    right: 8.5rem;
     width: 24px;
     height: 24px;
     font-size: 20px;
   }
 }
 
-/* Estilo responsivo para telas até 768px */
-@media (max-width: 768px) {
+@media (max-width: 767px) {
+  /* Estilo responsivo para telas de 767px a 320px */
   .popup__container_large {
-    max-width: 90vw;
+    max-width: 85vw;
     max-height: 80vh;
-    padding-top: 40px;
-    border-radius: 5px;
+    padding-top: 20px;
+    border-radius: 8px;
   }
 
   .popup__image-large {
     max-width: 75vw;
     max-height: 75vh;
     margin: 10px 0;
-    border-radius: 5px;
+    border-radius: 8px;
   }
 
   .popup__image_close {
-    top: 0.5rem;
-    right: 12rem;
-    width: 20px;
-    height: 20px;
-    font-size: 18px;
+    top: 1.7rem;
+    right: 3.5rem;
+    width: 24px;
+    height: 24px;
+    font-size: 20px;
   }
 }
