--- a/blocks/popup__image.css
+++ b/blocks/popup__image.css
@@ -50,10 +50,11 @@
     margin-bottom: 4.5rem;
   }
   .popup__container_large {
-    max-width: 70vw;
+    max-width: 90vw;
     max-height: 70vh;
     padding-top: 60px;
     border-radius: 12px;
+    position: relative;
   }
 
   .popup__image-large {
@@ -69,6 +70,7 @@
     width: 32px;
     height: 32px;
     font-size: 30px;
+    position: absolute;
   }
 }
 
@@ -91,6 +93,7 @@
     max-height: 75vh;
     padding-top: 50px;
     border-radius: 10px;
+    position: relative;
   }
 
   .popup__image-large {
@@ -101,11 +104,12 @@
   }
 
   .popup__image_close {
-    top: 14rem;
-    right: 55rem;
+    top: -4rem;
+    right: -4rem;
     width: 50px;
     height: 50px;
     font-size: 26px;
+    position: absolute;
   }
   /* Input do formulário */
   .popup__input {
@@ -163,12 +167,28 @@
     font-size: 3.5rem;
     margin-bottom: 3rem;
   }
+  .popup__container_large {
+    max-width: 75vw;
+    max-height: 75vh;
+    padding-top: 50px;
+    border-radius: 10px;
+    position: relative;
+  }
+
+  .popup__image-large {
+    max-width: 70vw;
+    max-height: 70vh;
+    margin: 15px 0;
+    border-radius: 10px;
+  }
+
   .popup__image_close {
-    top: 17rem;
-    right: 46rem;
+    top: -4rem;
+    right: -4rem;
     width: 45px;
     height: 45px;
     font-size: 24px;
+    position: absolute;
   }
 }
 
@@ -192,6 +212,7 @@
     max-height: 80vh;
     padding-top: 40px;
     border-radius: 8px;
+    position: relative;
   }
 
   .popup__image-large {
@@ -202,11 +223,12 @@
   }
 
   .popup__image_close {
-    top: 16.6rem;
-    right: 36.5rem;
+    top: -4rem;
+    right: -4rem;
     width: 35px;
     height: 35px;
     font-size: 22px;
+    position: absolute;
   }
 }
 
@@ -230,6 +252,7 @@
     max-height: 80vh;
     padding-top: 40px;
     border-radius: 8px;
+    position: relative;
   }
 
   .popup__image-large {
@@ -240,11 +263,12 @@
   }
 
   .popup__image_close {
-    top: 1.3rem;
-    right: 34rem;
-    width: 24px;
-    height: 24px;
+    top: -3rem;
+    right: -2.5rem;
+    width: 35px;
+    height: 35px;
     font-size: 22px;
+    position: absolute;
   }
 }
 
@@ -268,6 +292,7 @@
     max-height: 80vh;
     padding-top: 40px;
     border-radius: 8px;
+    position: relative;
   }
 
   .popup__image-large {
@@ -278,17 +303,18 @@
   }
 
   .popup__image_close {
-    top: 1.3rem;
-    right: 28rem;
-    width: 24px;
-    height: 24px;
+    top: -2rem;
+    right: -2rem;
+    width: 30px;
+    height: 30px;
     font-size: 22px;
+    position: absolute;
   }
 }
 
 /* Estilo responsivo para telas de 1399px a 1200px */
 
-@media (max-width: 1399px) and (min-width: 1200px) {
+@media (max-width: 1399px) and (min-width: 1203px) {
   .popup__container {
     width: 40%;
     box-sizing: border-box;
@@ -306,6 +332,7 @@
     max-height: 80vh;
     padding-top: 40px;
     border-radius: 8px;
+    position: relative;
   }
 
   .popup__image-large {
@@ -316,15 +343,16 @@
   }
 
   .popup__image_close {
-    top: 1.3rem;
-    right: 23rem;
-    width: 24px;
-    height: 24px;
+    top: -2rem;
+    right: -2rem;
+    width: 30px;
+    height: 30px;
     font-size: 22px;
+    position: absolute;
   }
 }
 
-@media (max-width: 1100px) and (min-width: 910px) {
+@media (max-width: 1202px) and (min-width: 914px) {
   .popup__container {
     width: 50%;
     box-sizing: border-box;
@@ -343,6 +371,7 @@
     max-height: 80vh;
     padding-top: 40px;
     border-radius: 8px;
+    position: relative;
   }
 
   .popup__image-large {
@@ -353,21 +382,23 @@
   }
 
   .popup__image_close {
-    top: 1rem;
-    right: 13rem;
-    width: 24px;
-    height: 24px;
+    top: -2rem;
+    right: -2rem;
+    width: 30px;
+    height: 30px;
     font-size: 22px;
+    position: absolute;
   }
 }
 
 /* Estilo responsivo para telas de 900px a 768px */
-@media (max-width: 900px) and (min-width: 768px) {
+@media (max-width: 913px) and (min-width: 768px) {
   .popup__container_large {
     max-width: 85vw;
     max-height: 80vh;
     padding-top: 20px;
     border-radius: 8px;
+    position: relative;
   }
 
   .popup__image-large {
@@ -378,21 +409,22 @@
   }
 
   .popup__image_close {
-    top: 1.7rem;
-    right: 8.5rem;
+    top: -2rem;
+    right: -2rem;
     width: 24px;
     height: 24px;
     font-size: 20px;
+    position: absolute;
   }
 }
 
 @media (max-width: 767px) {
-  /* Estilo responsivo para telas de 767px a 320px */
   .popup__container_large {
     max-width: 85vw;
     max-height: 80vh;
     padding-top: 20px;
     border-radius: 8px;
+    position: relative;
   }
 
   .popup__image-large {
@@ -403,10 +435,11 @@
   }
 
   .popup__image_close {
-    top: 1.7rem;
-    right: 3.5rem;
+    top: -2rem;
+    right: -2rem;
     width: 24px;
     height: 24px;
     font-size: 20px;
+    position: absolute;
   }
 }
