--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -47,6 +47,7 @@
 }
 
 .cards__title {
+  display: flex;
   font-size: 1.5rem;
   font-style: normal;
   font-weight: 900;
@@ -54,6 +55,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  justify-content: center;
 }
 
 .cards__like {
