--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -77,6 +77,9 @@
   background-image: url(../images/images__button/like__active.webp);
 }
 
+.cards__like-icon_active {
+  background-image: url(../images/images__button/like__active.webp); /* ícone preenchido */
+}
 .cards__trash {
   position: absolute;
   top: 20px;
