--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -83,6 +83,28 @@
   opacity: 0.6;
 }
 
+.profile__avatar-container {
+  position: relative;
+  width: 120px;
+  height: 120px;
+  cursor: pointer;
+}
+
+.profile__avatar-edit-icon {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: url("../images/images__button/edit__button.webp") no-repeat center;
+  background-size: 30px 30px;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  border-radius: 50%;
+}
+
+.profile__avatar-container:hover .profile__avatar-edit-icon {
+  opacity: 1;
+}
+
 @media (max-width: 1024px) and (min-width: 768px) {
   .profile {
     width: 660px;
